# CMSB

./: README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  consts.rs  lib.rs  login.rs  main.rs  storage.rs
src-tauri/src/storage/: init.rs  initialize.rs  read.rs  write.rs
src/components/: Left.vue  List.vue  Login.vue  Menus.vue  PersionList.vue  Right.vue  UserInfo.vue  WorkSpace.vue
src/js/: constants.js  routes.js  store.js
